added some more image and icon assets and changed boldness of url text on welcome page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ flutter:
   assets: 
     - assets/background/
     - assets/logos/
+    - assets/icons/
   fonts:
     - family: Courier Font
       fonts:
